--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.heart-like {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &::before {
+      content: "❤";
+      bottom: 35px;
+      position: absolute;
+      animation: fly .5s ease;
+    }
+  }
+  @keyframes fly {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    50% {
+      opacity: 0.9;
+      transform: scale(1.2) translateY(-30px) ;
+    }
+    100% {
+      opacity: 0;
+      color: rgb(255, 0, 0);
+      transform: scale(.2) translateY(-50px);
+    }
+  }
